--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,10 +2,10 @@ project:
   type: website
 
 website:
-  title: "Junze Tan-website"
+  title: "Junze Tan's Website - Welcome!"
   navbar:
     left:
-      - text: About You
+      - text: About Me Junze Tan
         href: about.qmd
       - text: Projects
         href: projects.qmd
