--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "Junze Tan's Website - Welcome!"
+  title: "Junze Tan's Website"
   navbar:
     left:
       - text: About Me Junze Tan
